# UNI

./: README.md
2. semester/: README.md
2. semester/OOP/: .gitignore
2. semester/OOP/L1/: CMakeLists.txt
2. semester/OOP/L3/: CMakeLists.txt  E1.cpp  item.cpp  item.h  product_catalog.cpp  product_catalog.h
2. semester/OOP/L4/: CMakeLists.txt  Die.cpp  Die.h  main.cpp
2. semester/OOP/OOP-examen/winter-2025/Opgave_2/: CMakeLists.txt
2. semester/OOP/OOP-examen/winter-2025/Opgave_2/include/: container_template.h  int_container.h  person.h  string_writer.h  string_writer_template.h  test_container_template.h  test_int_container.h  test_string_writer.h  test_string_writer_template.h
2. semester/OOP/OOP-examen/winter-2025/Opgave_2/src/: int_container.cpp  opgave_2.cpp  person.cpp  string_writer.cpp  test_container_template.cpp  test_int_container.cpp  test_string_writer.cpp  test_string_writer_template.cpp
2. semester/OOP/OOP-examen/winter-2025/Opgave_3/: CMakeLists.txt
2. semester/OOP/OOP-examen/winter-2025/Opgave_3/include/: account.h  annuity_loan.h  loan.h  serial_loan.h  test_account.h  test_annuity_loan.h  test_serial_loan.h
2. semester/OOP/OOP-examen/winter-2025/Opgave_3/src/: account.cpp  annuity_loan.cpp  loan.cpp  opgave_3.cpp  serial_loan.cpp  test_account.cpp  test_annuity_loan.cpp  test_serial_loan.cpp
2. semester/PLA/: README.md
2. semester/PLA/Exercises/: 2_Vectors.ipynb  3_norm,len,ang.ipynb  5_.ipynb  (+7 more)
3. semester/: README.md
4. semester/: README.md
5. semester/: README.md
6. semester/: README.md
7. semester/: README.md
(+103 files in other folders)
